--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 body
 {
@@ -54,7 +54,7 @@ body
 
 .right-profile
 {
-    width: 60%;
+    width: 50%;
     height: 120px;
     margin-left: 1%;
     float: left;
@@ -636,8 +636,7 @@ ul#nav
     border: none;
     border-radius: 5px;
     padding: 5px;
-    margin-top: 60px;
-    margin-left:140px;
+    margin:20px 0 50px 35%;
     text-decoration: none;
     font-size: 15px;
     width: 26%;
@@ -657,3 +656,16 @@ ul#nav
     width: 26%;
     height: 35px;
 }
+.back
+{
+    float: right;
+background-color: #701D1A;
+border: none;
+margin-top: 6px;
+margin-right: 29px;
+width: 50px;
+height: 24px;
+color: #fff;
+ border-radius: 5px;
+    
+    }
